--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <tr>
         <td>2019 - 2023</td>
         <td>B.tech</td>
-        <td>aape pta kr lai</td>
+        <td>Result is pending</td>
       </tr>
     </tbody>
     <tfoot>
