--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Supandeep Singh</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="https://instagram.fixc1-2.fna.fbcdn.net/v/t51.2885-19/s150x150/84279059_193308005256323_7134257084601729024_n.jpg?_nc_ht=instagram.fixc1-2.fna.fbcdn.net&_nc_ohc=ObyH7JAaUKwAX83oX-N&oh=771e2ae06423dced0e57b4fbc5bf7d2c&oe=5FA04A29"
-          alt="Supan profile pic"></td>
+          alt="Supan's profile pic"></td>
       <td>
         <h1>Supandeep Singh</h1>
         <p><em>Electronics undergraduate at <a href="https://www.nitkkr.ac.in/">NIT Kurukshetra</a></em></p>
@@ -40,7 +41,7 @@
       <tr>
         <td>2019 - 2023</td>
         <td>B.tech</td>
-        <td>Result is pending</td>
+        <td>Result Pending</td>
       </tr>
     </tbody>
     <tfoot>
